@@ -6,6 +6,10 @@ Changes with Apache 2.3.3
      mod_proxy_ajp: Avoid delivering content from a previous request which
      failed to send a request body. PR 46949 [Ruediger Pluem]
 
+  *) mod_dir: add DefaultHandler directive, to enable admin to specify
+     an action to happen when a URL maps to no file, without resorting
+     to ErrorDocument or mod_rewrite.  PR 47184 [Nick Kew]
+
   *) mod_cgid: Do not leak the listening Unix socket file descriptor to the
      CGI process. PR 47335 [Kornél Pál <kornelpal gmail.com>]
 
